# imio

./: .all-contributorsrc  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
imio/: __init__.py  load.py  save.py  utils.py
tests/tests/: test_imio.py
