[project]
name = "imio"
description = "Loading and saving of image data."
readme = "README.md"
authors = [
    {name = "Charly Rousseau, Adam Tyson", email = "code@adamltyson.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "imlib",
    "natsort",
    "nibabel",
    "nibabel >= 2.1.0",
    "numpy",
    "psutil",
    "pynrrd",
    "scikit-image",
    "slurmio >= 0.0.5",
    "tifffile",
    "tqdm",
]
dynamic = ['version']

[project.urls]
Homepage = "https://github.com/brainglobe/imio"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["imio*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=imio"
filterwarnings = [
    "error",
    # Emitted by scikit-image on import, see https://github.com/scikit-image/scikit-image/issues/6663
    # This filter should be removed when scikit-image 0.20 is released
    "ignore:`np.bool8` is a deprecated alias for `np.bool_`",
]

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true
